--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Login to DockerHub 
         uses: docker/login-action@v3  
         with: 
-          username: ${{ Tomy}} # crear los secretos en Settings --> Secrets/Actions/New Repository Secret 
-          password: ${{ Pass }}  
+          username: ${{ TOMY}} # crear los secretos en Settings --> Secrets/Actions/New Repository Secret 
+          password: ${{ PASS }}  
       - name: Etiquetar con formato DockerHub 
         run: | 
           docker tag p2gps/web ${{ Tomy }}/p2gps:web 
