--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,12 +52,12 @@ jobs:
       - name: Login to DockerHub 
         uses: docker/login-action@v3  
         with: 
-          username: ${{ TOMY}} # crear los secretos en Settings --> Secrets/Actions/New Repository Secret 
-          password: ${{ PASS }}  
+          username: ${{ DOCKERHUB_USERNAME }} # crear los secretos en Settings --> Secrets/Actions/New Repository Secret 
+          password: ${{ DOCKERHUB_PASSWORD }}  
       - name: Etiquetar con formato DockerHub 
         run: | 
-          docker tag p2gps/web ${{ Tomy }}/p2gps:web 
-          docker tag p2gps/order ${{ Tomy }}/p2gps:order 
+          docker tag p2gps/web ${{ DOCKERHUB_USERNAME }}/p2gps:web 
+          docker tag p2gps/order ${{ DOCKERHUB_USERNAME }}/p2gps:order 
       - name: Push a DockerHub 
         run: | 
             docker push ${{ Tomy }}/p2gps:order 
