--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,13 +52,13 @@ jobs:
       - name: Login to DockerHub 
         uses: docker/login-action@v3  
         with: 
-          username: ${{ secrets.DOCKERHUB_USERNAME }} # crear los secretos en Settings --> Secrets/Actions/New Repository Secret 
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}  
+          username: ${{ DOCKERHUB_USERNAME }} # crear los secretos en Settings --> Secrets/Actions/New Repository Secret 
+          password: ${{ DOCKERHUB_PASSWORD }}  
       - name: Etiquetar con formato DockerHub 
         run: | 
-          docker tag p2gps/web ${{ secrets.DOCKERHUB_USERNAME }}/p2gps:web 
-          docker tag p2gps/order ${{ secrets.DOCKERHUB_USERNAME }}/p2gps:order 
+          docker tag p2gps/web ${{ DOCKERHUB_USERNAME }}/p2gps:web 
+          docker tag p2gps/order ${{ DOCKERHUB_USERNAME }}/p2gps:order 
       - name: Push a DockerHub 
         run: | 
-            docker push ${{ secrets.DOCKERHUB_PASSWORD }}/p2gps:order 
-            docker push ${{ secrets.DOCKERHUB_PASSWORD }}/p2gps:web
+            docker push ${{ DOCKERHUB_PASSWORD }}/p2gps:order 
+            docker push ${{ DOCKERHUB_PASSWORD }}/p2gps:web
