--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services: # ahora se indican los servicios por el orden en que se quiere que se 
 #Por ejemplo, mongo debe estar antes de order. 
 #mongo: mismo nombre usado en el run.sh de Order y application.properties. #Se resuelve en una dirección IP. 
   mongo:  
-    image: tomy11/p2gps:db 
+    image: paberlo/p2gps:db 
     deploy: 
       replicas: 1 # para escabilidad del servicio.  
       resources: 
