--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services: # ahora se indican los servicios por el orden en que se quiere que se 
 #Por ejemplo, mongo debe estar antes de order. 
 #mongo: mismo nombre usado en el run.sh de Order y application.properties. #Se resuelve en una dirección IP. 
   mongo:  
-    image: paberlo/p2gps:db 
+    image: tomy11/p2gps:db 
     deploy: 
       replicas: 1 # para escabilidad del servicio.  
       resources: 
         limits: 
-          cpus: "0.15" 
+          #cpus: "0.15" 
           memory: 200M 
       restart_policy: 
         condition: on-failure #reinicar el contenedor si falla 
@@ -18,14 +18,14 @@ services: # ahora se indican los servicios por el orden en que se quiere que se 
     volumes: 
       - "db-data:/data/db" # para guardar en local los cambios en el contenedor 
   order: 
-    image: paberlo/p2gps:order 
+    image: tomy11/p2gps:order 
     depends_on: 
       - "mongo"  #le pasamos al servicio order la IP del servicio mongo 
     deploy: 
       replicas: 1 
       resources: 
         limits: 
-          cpus: "0.6" 
+          #cpus: "0.6" 
           memory: 500M 
       restart_policy: 
         condition: on-failure 
@@ -37,11 +37,11 @@ services: # ahora se indican los servicios por el orden en que se quiere que se 
       replicas: 1 
       resources: 
         limits: 
-          cpus: "0.25" 
+          #cpus: "0.25" 
           memory: 300M 
       restart_policy: 
         condition: on-failure 
     ports: 
       - "80:8080"   
 volumes:  
-   db-data: 
+   db-data:
